--- a/Documentación/anexos.tex
+++ b/Documentación/anexos.tex
@@ -350,7 +350,7 @@
 \title{título del TFG \\Documentación Técnica}
 \author{Saúl Martín Ibáñez}
 \tutor{Pedro Luis Sánchez Ortega}
-\cotutor{Alvar Arnaiz González}
+\cotutor{Álvar Arnaiz González}
 \date{\today}
 
 \begin{document}
