--- a/Documentación/tex/3_Conceptos_teoricos.tex
+++ b/Documentación/tex/3_Conceptos_teoricos.tex
@@ -68,9 +68,14 @@ Algunos ejemplos que muestra son, por ejemplo, el reconocimiento de un folleto d
 Otros en los que reconoce la cara (facetracking) y es capaz de poner objetos en AR, por ejemplo, sombreros, gafas, cascos…
 Posee Word tracking, que en resumen es la capacidad de reconocer el entorno para poder colocar objetos de una manera mas realista sobre el terreno, por ejemplo, que de la sensación de que realmente esta sobre la mesa aunque vayamos moviendo el ángulo de la cámara.
 
-\subsection{Kudan} Kudan\footnote{\href{https://www.xlsoft.com/en/products/kudan/index.html}{kudan}} es un tecnología para percepción artificial, la cual se puede utilizar para la AR/VR , robótica y drones, y los coches.
-Usa la tecnología SLAM (Simultaneous Localization and Mapping) para el reconocimiento del escenario, esta tecnología también la usa ArCore por ejemplo.
-Tiene disponible SDK para desarrollar, en iOS, Android, y Unity.
+\subsection{Kudan} Kudan\footnote{\href{https://www.xlsoft.com/en/products/kudan/index.html}{kudan}} 
+se trata de un SDK, con la capacidad de soportar AR con marcadores y sin la necesidad de marcadores. 
+Posee soporte para APIs nativas, como ObjetiveC para iOS, Java para Android y Unity.
+
+El motor de Kudan está escrito en C++ y optimizado con programación en ensamblador, dando un mayor rendimiento y más estable, con el menor impacto de memoria.
+Usa la tecnología SLAM (Simultaneous Localization and Mapping) para el reconocimiento del escenario.
+
+\imagen{marta_2}{Imagen perteneciente a la aplicacion M.A.R.T.A, que funciona con Kudan}
 
 \subsection{Vuforia}
 Vuforia\footnote{\url{https://developer.vuforia.com/}} es un kit de desarrollo( SDK) para aplicaciones de AR, para las plataformas de Android, iOS, Windows y HoloLens. Fue creado por Qualcomm Connected Experience en 2010, y en 2015 PTC inc lo compro \cite{simonetti2013vuforia}.
