--- a/Documentación/bibliografia.bib
+++ b/Documentación/bibliografia.bib
@@ -54,3 +54,5 @@
 
 @book{linowes_babilinski_2017, place={Birmingham}, title={Augmented reality for developers build practical augmented reality applications with Unity, ARCore, ARKit, and Vuforia}, publisher={Packt}, author={Linowes, Jonathan and Babilinski, Krystian}, year={2017}
 }
+
+@misc{ kudan_developer_hub, title={Kudan AR SDK}, url={https://www.xlsoft.com/doc/kudan/}, journal={The Kudan Developer Hub}}
