--- a/Documentación/tex/D_Manual_programador.tex
+++ b/Documentación/tex/D_Manual_programador.tex
@@ -8,11 +8,11 @@
 \subsection{Unity}
 Instalación.
 
-Para Instalar el motor unity es necesario descargar Unity Hub: \url{https://store.unity.com/es/download-nuo}
+Para Instalar el motor Unity es necesario descargar Unity Hub: \url{https://store.unity.com/es/download-nuo}
 
-Unity Hub se trata de un launcher desde el que se pueden, descargar varias versiones de Unity simultáneamente, pudiendo escoger la que mejor se acomode a las necesidades del usuario. También ofrece una serie de tutoriales para iniciarse en el desarrollo de Unity. Por ultimo ofrece un listado de los proyectos del usuario, así como a que versión pertenecen, pudiendo escoger con que versión de Unity desean ejecutarlos.
+Unity Hub se trata de un launcher desde el que se pueden descargar varias versiones de Unity simultáneamente, pudiendo escoger la que mejor se acomode a las necesidades del usuario. También ofrece una serie de tutoriales para iniciarse en el desarrollo de Unity. Por último ofrece un listado de los proyectos del usuario, así como a que versión pertenecen, pudiendo escoger con que versión de Unity desean ejecutarlos.
 
-En la pestaña de installs, pulsando el botón "Add", saldrá una venta donde poder escoger la versión deseada, al pasar el siguiente paso deberemos escoger los módulos complementarios para Unity, por el momento sería necesario el de Android, para poder pasar nuestros proyectos a una aplicación Android, importante desplegar las opciones del modulo y seleccionar ambas, pues para la compilación de una aplicación es estrictamente necesario el APK de Android.\imagen{unity01}{Paso 1: Seleccionar la versión de Unity }
+En la pestaña de installs, pulsando el botón <<Add>>, saldrá una ventana donde poder escoger la versión deseada, al pasar el siguiente paso deberemos escoger los módulos complementarios para Unity, por el momento sería necesario el de Android, para poder pasar nuestros proyectos a una aplicación Android, importante desplegar las opciones del módulo y seleccionar ambas, pues para la compilación de una aplicación es estrictamente necesario el APK de Android.\imagen{unity01}{Paso 1: Seleccionar la versión de Unity }
 \imagen{unity02}{Paso 2: Seleccionar}
 
 Una vez terminada la instalación ya es posible comenzar a crear proyectos. 
