--- a/Documentación/bibliografia.bib
+++ b/Documentación/bibliografia.bib
@@ -56,3 +56,7 @@
 }
 
 @misc{ kudan_developer_hub, title={Kudan AR SDK}, url={https://www.xlsoft.com/doc/kudan/}, journal={The Kudan Developer Hub}}
+
+@misc{8thwall_products, url={https://www.8thwall.com/products}, journal={8th Wall - Products}}
+
+@misc{wikitude, title={Wikitude}, url={https://www.wikitude.com/products/wikitude-sdk/}, journal={Wikitude}}
