--- a/Documentación/tex/3_Conceptos_teoricos.tex
+++ b/Documentación/tex/3_Conceptos_teoricos.tex
@@ -115,7 +115,22 @@ Actualmente Vuforia esta disponible para las versiones indicadas en la siguiente
 
 
 \subsection{Wikitude}
+Wikitude\footnote{\url{https://www.wikitude.com/}} se trata de un SDK de realidad aumentada, ofrece un amplio repertorio de características\cite{wikitude}: 
+\begin{itemize}
+	\item Reconocimiento de imágenes.
+	\item Reconocimiento de objetos.
+	\item Reconocimiento de múltiples marcadores: Permite reconocer múltiples marcadores de forma simultanea.
+	\item Instant Tracking: reconocimiento sin la necesidad de marcadores, permitiendo superponer elementos virtuales en superficies detectadas con la tecnologia Slam Instant Tracking.
+	
+	\item Seguimiento extendido: Permite que un elemento virtual que se ha superpuesto en un punto o marcador determinado, persista aunque dicho punto se salga del campo de visión de la cámara.
+	
+	\item Geo AR: Permite agregar contenido de realidad aumentada basándose en la ubicación, valiéndose del GPS y demás sensores para determinar la ubicación.
+	\item Cloud Recognition: Ofrece la posibilidad de guardar en linea los datos de imágenes/marcadores para las aplicaciones.
+\end{itemize}
 
+Wikitude esta disponible para Android, iOS, Windows y Smart Glasses.
+También posee un amplio soporte para frameworks de desarrollo : Andoid, iOS, Windows, Unity, Cordova, Xamarin, Flutter, Titanium. 
+Los sistemas deberán cumplir los requisitos indicados en el siguiente enlace:\url{https://www.wikitude.com/documentation/latest/android/supporteddevices.html#supported-devices}.
 
 \subsection{ArUco}
 
@@ -128,7 +143,7 @@ Es una librería de visión por computación y machine learning, de código abie
 
 \subsection{8thWall}
 8thWall\footnote{\url{https://www.8thwall.com/}}
-es un entorno de desarrollo de realidad aumentada, que se caracteriza principalmente por el WebAR, que da la posibilidad de ejecutar las imágenes AR a través del propio navegador web del dispositivo, sin tener que instalarse ninguna aplicación extra en el dispositivo. 
+es un entorno de desarrollo de realidad aumentada, que se caracteriza principalmente por el WebAR, que da la posibilidad de ejecutar las imágenes AR a través del propio navegador web del dispositivo, sin tener que instalarse ninguna aplicación extra en el dispositivo\cite{8thwall_products}.
 
 Posee las siguientes características:
 \begin{itemize}
